--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <link rel="shortcut icon" href="pinout-logo.png" type="image/png">
 <script src="register_serviceworker.js" type="text/javascript"></script>
 <link rel="manifest" href="manifest.json">
-<title>Raspberry Pi Pico GPIO Pinout</title>
-<meta name="description" content="An interactive, accessible and beautiful GPIO Pinout guide for the Raspberry Pi Pico" />
+<title>Raspberry Pi Pico W GPIO Pinout</title>
+<meta name="description" content="An interactive, accessible and beautiful GPIO Pinout guide for the Raspberry Pi Pico W" />
 <link rel="stylesheet" href="pinout.css" type="text/css" media="screen" />
 </head>
 <body>
     <header>
-        <h1>Raspberry Pi Pico Pinout</h1>
-        <p>Interactive, accessible &amp; beautiful GPIO pinout and pin function guide for the Raspberry Pi Pico</p>
+        <h1>Raspberry Pi Pico W Pinout</h1>
+        <p>Interactive, accessible &amp; beautiful GPIO pinout and pin function guide for the Raspberry Pi Pico W</p>
     </header>
     <nav class="nojs" id="nav">
         <ul class="filter settings">
@@ -60,8 +60,8 @@
             <tr aria-label="Twentieth pin."   ><th>20</th><td class="gpio">GP15</td>          <td class="spi" title="SPI 1: Host-transmit">SPI1 TX</td>        <td class="i2c" title="I2C 0: Clock">I2C1 SCL</td>      <td class="uart advanced" title="UART 0: Request to send">UART0 RTS</td>   <td class="pwm advanced" title="PWM 7: Channel B">PWM7 B</td></tr>
             </tbody>
         </table>
-        <div class="pico"><img width="207" height="523" alt="Raspberry Pi Pico with the micro USB port facing upwards, standing face-up on its GPIO pins." src="raspberry-pi-pico.svg" /></div>
-        <div class="pico underside"><img width="207" height="523" alt="Raspberry Pi Pico with the micro USB port facing downwards, standing bottom-up on its GPIO pins." src="raspberry-pi-pico-underside.svg" /></div>
+        <div class="pico"><img width="207" height="523" alt="Raspberry Pi Pico W with the micro USB port facing upwards, standing face-up on its GPIO pins." src="raspberry-pi-picow.svg" /></div>
+        <div class="pico underside"><img width="207" height="523" alt="Raspberry Pi Pico W with the micro USB port facing downwards, standing bottom-up on its GPIO pins." src="raspberry-pi-picow-underside.svg" /></div>
         <table aria-label="Righthand pins" class="labels right" aria-rowcount="20" aria-colcount="5" cellpadding="0" cellspacing="5">
             <thead>
                 <th scope="col">Pin</th><th scope="col">Name/ADC</th><th scope="col">SPI</th><th scope="col">I2C</th><th scope="col">UART</th><th scope="col">PWM</th>
@@ -91,8 +91,8 @@
         </table>
     </article>
     <footer>
-        <p>Raspberry Pi Pico Pinout is maintained by <a href="https://fosstodon.org/@gadgetoid" title="@gadgetoid at Mastodon">@Gadgetoid</a>.</p>
-        <p>Want to help out? <a href="https://github.com/pinout-xyz/pico.pinout.xyz" title="Send a pull-request on GitHub.">Send a PR</a>, or toss me some coin via <a href="https://ko-fi.com/gadgetoid" title="Buy me a coffee on Ko-Fi">Ko-Fi</a>, <a href="https://github.com/sponsors/Gadgetoid" title="Sponsor me on GitHub">GitHub</a> or <a href="https://www.patreon.com/gadgetoid" title="Sponsor me on Patreon">Patreon</a>.</p>
+        <p>Raspberry Pi Pico W Pinout is maintained by <a href="https://fosstodon.org/@gadgetoid" title="@gadgetoid at Mastodon">@Gadgetoid</a>.</p>
+        <p>Want to help out? <a href="https://github.com/pinout-xyz/picow.pinout.xyz" title="Send a pull-request on GitHub.">Send a PR</a>, or toss me some coin via <a href="https://ko-fi.com/gadgetoid" title="Buy me a coffee on Ko-Fi">Ko-Fi</a>, <a href="https://github.com/sponsors/Gadgetoid" title="Sponsor me on GitHub">GitHub</a> or <a href="https://www.patreon.com/gadgetoid" title="Sponsor me on Patreon">Patreon</a>.</p>
     </footer>
     <script src="pinout.js" type="text/javascript"></script>
 </body>
