--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         </table>
     </article>
     <footer>
+        <p><a href="https://pico.pinout.xyz/">View the Pico version of this pinout.</a></p>
         <p>Raspberry Pi Pico W Pinout is maintained by <a href="https://fosstodon.org/@gadgetoid" title="@gadgetoid at Mastodon">@Gadgetoid</a>.</p>
         <p>Want to help out? <a href="https://github.com/pinout-xyz/picow.pinout.xyz" title="Send a pull-request on GitHub.">Send a PR</a>, or toss me some coin via <a href="https://ko-fi.com/gadgetoid" title="Buy me a coffee on Ko-Fi">Ko-Fi</a>, <a href="https://github.com/sponsors/Gadgetoid" title="Sponsor me on GitHub">GitHub</a> or <a href="https://www.patreon.com/gadgetoid" title="Sponsor me on Patreon">Patreon</a>.</p>
     </footer>
