--- a/index.html
+++ b/index.html
@@ -90,6 +90,25 @@
             </tbody>
         </table>
     </article>
+    <article class="extra advanced">
+        <table aria-label="Additional pin definitions.">
+            <thead>
+                <th scope="col">Pin</th><th scope="col">Function</th><th scope="col">Notes</th>
+            </thead>
+            <tbody>
+                <tr><td>GP23</td><td>Wireless Power On</td><td></td></tr>
+                <tr><td>GP24</td><td>Wireless SPI Data</td><td></td></tr>
+                <tr><td>GP25</td><td>Wireless SPI Chip-Select</td><td></td></tr>
+                <tr><td>GP29 / A3</td><td>Wireless SPI Clock / VSYS Sense</td><td>Read VSYS/3 through resistor divider and FET Q1</td></tr>
+                <tr><td>A4</td><td>Temperature</td><td>Read onboard temperature sensor</td></tr>
+            </tbody>
+            <tbody class="wl_gpio">
+                <tr><td>WL_GPIO0</td><td>User LED</td><td></td></tr>
+                <tr><td>WL_GPIO1</td><td>RT6150B-33GQW Power-Select</td><td>LOW (default) for high efficiency (PFM)<br>HIGH for improved ripple (PWM)</td></tr>
+                <tr><td>WL_GPIO2</td><td>VBUS Sense</td><td>Detect USB or VBUS power</td></tr>
+            </tbody>
+        </table>
+    </article>
     <footer>
         <p><a href="https://pico.pinout.xyz/">View the Pico version of this pinout.</a></p>
         <p>Raspberry Pi Pico W Pinout is maintained by <a href="https://fosstodon.org/@gadgetoid" title="@gadgetoid at Mastodon">@Gadgetoid</a>.</p>
