--- a/index.html
+++ b/index.html
@@ -110,7 +110,10 @@
         </table>
     </article>
     <footer>
-        <p><a href="https://pico.pinout.xyz/">View the Pico version of this pinout.</a></p>
+        <p><a title="Raspberry Pi Pico (non-W) Pinout" href="https://pico.pinout.xyz/">Pico (non-W) Pinout</a>
+        | <a title="Raspberry Pi Pico Datasheet (PDF)" href="https://datasheets.raspberrypi.com/picow/pico-w-datasheet.pdf">Datasheet</a>
+        | <a title="Getting Started With Raspberry Pi Pico (PDF)" href="https://datasheets.raspberrypi.com/pico/getting-started-with-pico.pdf">Getting Started Guide</a></a>
+        | <a title="Connecting to the Internet with Raspberry Pi Pico W" href="https://datasheets.raspberrypi.com/picow/connecting-to-the-internet-with-pico-w.pdf">Internet Connection Guide</a>
         <p>Raspberry Pi Pico W Pinout is maintained by <a href="https://fosstodon.org/@gadgetoid" title="@gadgetoid at Mastodon">@Gadgetoid</a>.</p>
         <p>Want to help out? <a href="https://github.com/pinout-xyz/picow.pinout.xyz" title="Send a pull-request on GitHub.">Send a PR</a>, or toss me some coin via <a href="https://ko-fi.com/gadgetoid" title="Buy me a coffee on Ko-Fi">Ko-Fi</a>, <a href="https://github.com/sponsors/Gadgetoid" title="Sponsor me on GitHub">GitHub</a> or <a href="https://www.patreon.com/gadgetoid" title="Sponsor me on Patreon">Patreon</a>.</p>
     </footer>
