--- a/index.html
+++ b/index.html
@@ -113,8 +113,9 @@
         <p><a title="Raspberry Pi Pico (non-W) Pinout" href="https://pico.pinout.xyz/">Pico (non-W) Pinout</a>
         | <a title="Raspberry Pi Pico W Datasheet (PDF)" href="https://datasheets.raspberrypi.com/picow/pico-w-datasheet.pdf">Pico W Datasheet</a>
         | <a title="Raspberry Pi RP2040 Datasheet (PDF) for in-depth information about the Pico W's RP2040 chip, peripherals and PIO." href="https://datasheets.raspberrypi.com/rp2040/rp2040-datasheet.pdf">RP2040 Datasheet</a>
-        | <a title="Getting Started With Raspberry Pi Pico (PDF)" href="https://datasheets.raspberrypi.com/pico/getting-started-with-pico.pdf">Getting Started Guide</a></a>
+        | <a title="Getting Started With Raspberry Pi Pico (PDF)" href="https://datasheets.raspberrypi.com/pico/getting-started-with-pico.pdf">Getting Started Guide</a>
         | <a title="Connecting to the Internet with Raspberry Pi Pico W" href="https://datasheets.raspberrypi.com/picow/connecting-to-the-internet-with-pico-w.pdf">Internet Connection Guide</a>
+        | <a title="Unofficial Pico Discord server" href="https://discord.gg/YxmkAyM77r">Discord</a></p>
         <p>This interactive, accessible &amp; beautiful GPIO pinout and pin function guide for the Raspberry Pi Pico is maintained by <a href="https://fosstodon.org/@gadgetoid" title="@gadgetoid at Mastodon">@Gadgetoid</a>.</p>
         <p>Want to help out? <a href="https://github.com/pinout-xyz/picow.pinout.xyz" title="Send a pull-request on GitHub.">Send a PR</a>, or toss me some coin via <a href="https://ko-fi.com/gadgetoid" title="Buy me a coffee on Ko-Fi">Ko-Fi</a>, <a href="https://github.com/sponsors/Gadgetoid" title="Sponsor me on GitHub">GitHub</a> or <a href="https://www.patreon.com/gadgetoid" title="Sponsor me on Patreon">Patreon</a>.</p>
     </footer>
