--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
                 <tr><td>GP25</td><td>Wireless SPI Chip-Select</td><td></td></tr>
                 <tr><td>GP29 / A3</td><td>Wireless SPI Clock / VSYS Sense</td><td>Read VSYS/3 through resistor divider and FET Q1</td></tr>
                 <tr><td>A4</td><td>Temperature</td><td>Read onboard temperature sensor</td></tr>
+								<tr><td>TP1</td><td>Ground</td><td>close coupled ground for differential USB signals</td></tr>
+                <tr><td>TP2</td><td>USB DM</td><td>USB Data Negative pin</td></tr>
+                <tr><td>TP3</td><td>USB DP</td><td>USB Data Positive pin</td></tr>
+                <tr><td>TP4</td><td>WL_GPIO1/SMPS PS Pin</td><td>marked do not use in datasheet</td></tr>
+                <tr><td>TP5</td><td>WL_GPIO0/LED</td><td>not recommended to be used in datasheet<br>can only be used as an output with special care</td></tr>
+                <tr><td>TP6</td><td>BOOTSEL</td><td>short low at power-up to boot into BOOTSEL</td></tr>
             </tbody>
             <tbody class="wl_gpio">
                 <tr><td>WL_GPIO0</td><td>User LED</td><td></td></tr>
