Update inter-site links.

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
     </article>
     <footer>
         <p><a title="Raspberry Pi Pico (non-W) Pinout" href="https://pico.pinout.xyz/">Pico (non-W) Pinout</a>
+        | <a title="Raspberry Pi Pico 2 Pinout" href="https://pico2.pinout.xyz/">Pico 2 Pinout</a>
         | <a title="Raspberry Pi Pico W Datasheet (PDF)" href="https://datasheets.raspberrypi.com/picow/pico-w-datasheet.pdf">Pico W Datasheet</a>
         | <a title="Raspberry Pi RP2040 Datasheet (PDF) for in-depth information about the Pico W's RP2040 chip, peripherals and PIO." href="https://datasheets.raspberrypi.com/rp2040/rp2040-datasheet.pdf">RP2040 Datasheet</a>
         | <a title="Getting Started With Raspberry Pi Pico (PDF)" href="https://datasheets.raspberrypi.com/pico/getting-started-with-pico.pdf">Getting Started Guide</a>
