Drop rogue bar.

--- a/index.html
+++ b/index.html
@@ -113,8 +113,7 @@
         <p><a title="Raspberry Pi Pico Pinout" href="https://pico.pinout.xyz/">Pico Pinout</a>
 | <a class="selected" title="Raspberry Pi Pico W Pinout" href="https://picow.pinout.xyz/">Pico W Pinout</a>
 | <a title="Raspberry Pi Pico 2 Pinout" href="https://pico2.pinout.xyz/">Pico 2 Pinout</a></p>
-        <p>
-| <a title="Raspberry Pi Pico W Datasheet (PDF)" href="https://datasheets.raspberrypi.com/picow/pico-w-datasheet.pdf">Pico W Datasheet</a>
+        <p><a title="Raspberry Pi Pico W Datasheet (PDF)" href="https://datasheets.raspberrypi.com/picow/pico-w-datasheet.pdf">Pico W Datasheet</a>
 | <a title="Raspberry Pi RP2040 Datasheet (PDF) for in-depth information about the Pico W's RP2040 chip, peripherals and PIO." href="https://datasheets.raspberrypi.com/rp2040/rp2040-datasheet.pdf">RP2040 Datasheet</a>
 | <a title="Getting Started With Raspberry Pi Pico (PDF)" href="https://datasheets.raspberrypi.com/pico/getting-started-with-pico.pdf">Getting Started Guide</a>
 | <a title="Connecting to the Internet with Raspberry Pi Pico W" href="https://datasheets.raspberrypi.com/picow/connecting-to-the-internet-with-pico-w.pdf">Internet Connection Guide</a>
