--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <h1>Raspberry Pi Pico Pinout</h1>
+        <h1>Raspberry Pi Pico W Pinout</h1>
         <ul><li title="Please donate to support continued work on these websites! Thank you.">Donate</li><li><a href="https://ko-fi.com/gadgetoid" title="Buy me a coffee on Ko-Fi">Ko-Fi</a></li><li><a href="https://github.com/sponsors/Gadgetoid" title="Sponsor me on GitHub">GitHub</a></li><li><a href="https://www.patreon.com/gadgetoid" title="Sponsor me on Patreon">Patreon</a></li></ul>
     </header>
     <nav class="nojs" id="nav">
@@ -119,7 +119,7 @@
 | <a title="Connecting to the Internet with Raspberry Pi Pico W" href="https://datasheets.raspberrypi.com/picow/connecting-to-the-internet-with-pico-w.pdf">Internet Connection Guide</a>
 | <a title="Official Raspberry Pi Pico forum" href="https://forums.raspberrypi.com/viewforum.php?f=143">Forum</a>
 | <a title="Unofficial Pico Discord server" href="https://discord.gg/YxmkAyM77r">Discord</a></p>
-        <p>This interactive, accessible &amp; beautiful GPIO pinout and pin function guide for the Raspberry Pi Pico is maintained by <a href="https://fosstodon.org/@gadgetoid" title="@gadgetoid at Mastodon">@Gadgetoid</a>.</p>
+        <p>This interactive, accessible &amp; beautiful GPIO pinout and pin function guide for the Raspberry Pi Pico W is maintained by <a href="https://fosstodon.org/@gadgetoid" title="@gadgetoid at Mastodon">@Gadgetoid</a>.</p>
         <p>Want to help out? <a href="https://github.com/pinout-xyz/picow.pinout.xyz" title="Send a pull-request on GitHub.">Send a PR</a>, or toss me some coin via <a href="https://ko-fi.com/gadgetoid" title="Buy me a coffee on Ko-Fi">Ko-Fi</a>, <a href="https://github.com/sponsors/Gadgetoid" title="Sponsor me on GitHub">GitHub</a> or <a href="https://www.patreon.com/gadgetoid" title="Sponsor me on Patreon">Patreon</a>.</p>
     </footer>
     <script src="pinout.js" type="text/javascript"></script>
